[package]
name = "image_changer"
version = "0.4.0"
edition = "2018"
authors = ["wrac4242 <wrac4242@gmail.com>"]
description = "A basic image lib wrapper to learn from"
repository = "https://github.com/wrac4242/image_changer"
license = "GPL-3.0-or-later"
keywords = ["image", "manipulation"]
homepage = "https://github.com/wrac4242/image_changer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.1"
path-clean = "0.1.0"
data-encoding = "2.3.2"
ring = "0.16.20"
num = "0.4.0"
