[package]
name = "image_changer"
version = "0.5.0"
edition = "2018"
authors = ["wrac4242 <wrac4242@gmail.com>"]
description = "A basic image lib wrapper to learn from"
repository = "https://github.com/wrac4242/image_changer"
license = "GPL-3.0-or-later"
keywords = ["image", "manipulation"]
homepage = "https://github.com/wrac4242/image_changer"
exclude = ["todo.md", ".github/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
path-clean = "1.0.1"
data-encoding = "2.3.2"
ring = "0.17.8"
num = "0.4.0"
